# tech-digest-bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/bot/: config.py  main.py  scheduler.py  states.py
src/bot/handlers/: news.py
src/bot/keyboards/: news_keyboards.py
src/parsers/: habr_rss.py
src/services/: subscription_service.py
src/storage/: repository.py
src/storage/local/: storage.py
